Fix drawer covering part of the header on desktop

--- a/dev/scss/components/_header.scss
+++ b/dev/scss/components/_header.scss
@@ -157,3 +157,17 @@
 
   @include gg-menu-list();
 }
+
+
+
+
+@include gg-breakpoint(medium) {
+  .gg-appbar,
+  .gg-searchbar {
+    padding-left: gg-size(drawer-width);
+
+    .gg-drawer-toggle {
+      display: none;
+    }
+  }
+}
